# downscaling

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-runpod-infra.yml  launch-dl-job.yml
config/: drome_ardeche.yml
deep_learning/: __init__.py  dataset.py  train.py
downscaling/deep_learning/: inference.py  model.py
downscaling/prtihvi_wxc/: finetune.py  inference.py  loader.py  netatmo_qc.py  optimal_interpolation.py  run_prithvi_frost_reanalysis.py
downscaling/scripts/: run_campaign.py  run_dl_inference.py  run_dl_train.py  run_statistical_downscaling.py
downscaling/shared/: __init__.py  indices.py  loaders.py
downscaling/statistical/: lapse_rate.py  pipeline.py
prtihvi_wxc/: __init__.py  dataset.py  finetune.py  inference.py  optimal_interpolation.py  prithvi_wxc_drome.yml  run_prithvi_frost_reanalysis.py
runs/: README.md
runs/april2021/: config.yml
runs/april2021/pmap/: cerra_night_20210426.yml  cerra_night_20210427.yml  cerra_night_20210428.yml  era5_night_20210426.yml  era5_night_20210427.yml  era5_night_20210428.yml
runs/campaign/: config.yml  pmap_cerraland_template.yml  pmap_era5land_template.yml
runs/gabls3/: config.yml  pmap_gabls3.yml  validate_gabls3.py
runs/scripts/: compare_downscaling.py  detect_cold_nights.py  orchestrate.py  run_campaign.py
scripts/: launch_dl_job.py  run_dl_inference.py  run_dl_train.py  run_era5land_downscaling.py  run_on_mac.py  run_statistical_downscaling.py
shared/: loaders.py
statistical/: __init__.py  lapse_rate.py  quantile_mapping.py
