[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "downscaling"
version = "0.1.0"
description = "Descente d'échelle statistique et deep learning ERA5/CERRA → 1 km pour indices d'assurance paramétrique"
requires-python = ">=3.10"

dependencies = [
    # Données / manipulation
    "numpy>=1.24",
    "scipy>=1.10",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "rasterio>=1.3",       # lecture GeoTIFF (MNT)
    "pyproj>=3.4",         # projections cartographiques
    "pyyaml>=6.0",
    # Deep learning
    "torch>=2.0",          # GPU CUDA ou Apple MPS
    # Téléchargement données
    "cdsapi>=0.6",         # ERA5 et CERRA via CDS API
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "cartopy>=0.21",
]
regrid = [
    "xesmf>=0.8",          # regrillage avancé (nécessite ESMPy)
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
]

[project.scripts]
run-stat-downscaling = "downscaling.scripts.run_statistical_downscaling:main"
run-dl-train         = "downscaling.deep_learning.train:main"
run-dl-inference     = "downscaling.deep_learning.inference:main"

[tool.uv]
package = true

[tool.uv.sources]
# Décommenter pour pointer vers une version locale de PHYEX ou pmap
# phyex = { path = "../PHYEX", editable = true }

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
